cluster/workloads/apps/doc-converter/base/service.yaml
# Doc Converter 애플리케이션 Service.

apiVersion: v1
kind: Service
metadata:
  name: doc-converter
spec:
  selector:
    app: doc-converter
  ports:
    - name: http
      port: 80
      targetPort: http
